[tool.poetry]
name = "asyncoptoma"
version = "0.1.0"
description = ""
authors = ["Sebastian Lübke <luebke@gonicus.de>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.0"

[tool.poetry.dev-dependencies]
autoflake = "^2.0.0"
isort = "^5.10.1"
black = "^24.0.0"
pytest = "^9.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
