[tool.poetry]
name = "asyncoptoma"
version = "0.1.0"
description = "Asynchronous Python client for controlling Optoma projectors over their HTTP interface."
authors = ["Sebastian Lübke <luebke@gonicus.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/luebke-dev/asyncoptoma"
keywords = ["optoma", "projector", "async", "home-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Video",
    "Typing :: Typed",
]
packages = [{ include = "asyncoptoma" }]
include = ["asyncoptoma/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.0.0"
isort = "^5.10.1"
black = "^24.0.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.26.0"
respx = "^0.21.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
